feat: add mysqlDependency