@@ -7,8 +7,9 @@
     <groupId>edu.miu.common</groupId>
     <artifactId>common-base-module</artifactId>
     <version>2.0.0-SNAPSHOT</version>
-    <relativePath /> <!-- lookup parent from repository -->
+    <relativePath/> <!-- lookup parent from repository -->
   </parent>
+
   <groupId>com.ea.group.four</groupId>
   <artifactId>AttendanceSystem</artifactId>
   <version>2.0.0-SNAPSHOT</version>
@@ -23,7 +24,7 @@
       <id>san0997</id>
       <url>https://pkgs.dev.azure.com/san0997/_packaging/san0997/maven/v1</url>
       <releases>
-        <enabled>true</enabled>
+        <enabled>false</enabled>
       </releases>
       <snapshots>
         <enabled>true</enabled>
@@ -82,6 +83,16 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <argLine>
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
